fix no material icons on mobile chrome #17

--- a/app/assets/stylesheets/fonts.less
+++ b/app/assets/stylesheets/fonts.less
@@ -2,7 +2,10 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v16/2fcrYFNaTjcS6g4U3t-Y5StnKWgpfO2iSkLzTz-AABg.ttf) format('truetype');
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(https://fonts.gstatic.com/s/materialicons/v16/2fcrYFNaTjcS6g4U3t-Y5StnKWgpfO2iSkLzTz-AABg.ttf) format('truetype'),
+    url(https://fonts.gstatic.com/s/materialicons/v17/2fcrYFNaTjcS6g4U3t-Y5RV6cRhDpPC5P4GCEJpqGoc.woff) format('woff');
 }
 
 .material-icons {
@@ -17,6 +20,7 @@
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
+  text-rendering: optimizeLegibility;
 }
 
 /* socicon */
